--- a/Cats & Dogs Recognition.ipynb
+++ b/Cats & Dogs Recognition.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Java\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -22,13 +14,6 @@
       "Platform: Windows-10-10.0.16299-SP0\n",
       "Tensorflow version: 1.5.0\n",
       "Keras version: 2.1.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -72,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -100,6 +85,7 @@
    "source": [
     "import os, shutil\n",
     "# 專案的根目錄路徑\n",
+    "os.chdir('C:\\\\Users\\\\Java\\\\tensorflow\\\\testdog\\\\')\n",
     "ROOT_DIR = os.getcwd()\n",
     "\n",
     "# 置放coco圖像資料與標註資料的目錄\n",
@@ -250,10 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.applications import VGG16\n",
@@ -279,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +273,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 150, 150, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 150, 150, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 150, 150, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -358,19 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2000 images belonging to 2 classes.\n",
-      "extract_features complete!\n",
-      "Found 1000 images belonging to 2 classes.\n",
-      "extract_features complete!\n",
-      "Found 1000 images belonging to 2 classes.\n",
-      "extract_features complete!\n"
+      "Found 2000 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -453,76 +432,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train on 2000 samples, validate on 1000 samples\n",
-      "Epoch 1/30\n",
-      "2000/2000 [==============================] - 1s 739us/step - loss: 0.5946 - acc: 0.6680 - val_loss: 0.4501 - val_acc: 0.8310\n",
-      "Epoch 2/30\n",
-      "2000/2000 [==============================] - 1s 531us/step - loss: 0.4248 - acc: 0.8085 - val_loss: 0.3626 - val_acc: 0.8700\n",
-      "Epoch 3/30\n",
-      "2000/2000 [==============================] - 1s 530us/step - loss: 0.3521 - acc: 0.8535 - val_loss: 0.3229 - val_acc: 0.8750\n",
-      "Epoch 4/30\n",
-      "2000/2000 [==============================] - 1s 526us/step - loss: 0.3035 - acc: 0.8730 - val_loss: 0.2975 - val_acc: 0.8870\n",
-      "Epoch 5/30\n",
-      "2000/2000 [==============================] - 1s 549us/step - loss: 0.2870 - acc: 0.8810 - val_loss: 0.2880 - val_acc: 0.8790\n",
-      "Epoch 6/30\n",
-      "2000/2000 [==============================] - 1s 543us/step - loss: 0.2728 - acc: 0.8910 - val_loss: 0.2839 - val_acc: 0.8780\n",
-      "Epoch 7/30\n",
-      "2000/2000 [==============================] - 1s 543us/step - loss: 0.2407 - acc: 0.9070 - val_loss: 0.2643 - val_acc: 0.8930\n",
-      "Epoch 8/30\n",
-      "2000/2000 [==============================] - 1s 532us/step - loss: 0.2264 - acc: 0.9140 - val_loss: 0.2593 - val_acc: 0.8930\n",
-      "Epoch 9/30\n",
-      "2000/2000 [==============================] - 1s 534us/step - loss: 0.2210 - acc: 0.9080 - val_loss: 0.2562 - val_acc: 0.8940\n",
-      "Epoch 10/30\n",
-      "2000/2000 [==============================] - 1s 525us/step - loss: 0.2070 - acc: 0.9185 - val_loss: 0.2500 - val_acc: 0.8950\n",
-      "Epoch 11/30\n",
-      "2000/2000 [==============================] - 1s 527us/step - loss: 0.1985 - acc: 0.9270 - val_loss: 0.2487 - val_acc: 0.8980\n",
-      "Epoch 12/30\n",
-      "2000/2000 [==============================] - 1s 526us/step - loss: 0.1777 - acc: 0.9345 - val_loss: 0.2517 - val_acc: 0.8990\n",
-      "Epoch 13/30\n",
-      "2000/2000 [==============================] - 1s 527us/step - loss: 0.1743 - acc: 0.9380 - val_loss: 0.2561 - val_acc: 0.8900\n",
-      "Epoch 14/30\n",
-      "2000/2000 [==============================] - 1s 537us/step - loss: 0.1704 - acc: 0.9370 - val_loss: 0.2452 - val_acc: 0.8990\n",
-      "Epoch 15/30\n",
-      "2000/2000 [==============================] - 1s 526us/step - loss: 0.1664 - acc: 0.9420 - val_loss: 0.2435 - val_acc: 0.8990\n",
-      "Epoch 16/30\n",
-      "2000/2000 [==============================] - 1s 531us/step - loss: 0.1561 - acc: 0.9485 - val_loss: 0.2429 - val_acc: 0.8980\n",
-      "Epoch 17/30\n",
-      "2000/2000 [==============================] - 1s 528us/step - loss: 0.1518 - acc: 0.9480 - val_loss: 0.2513 - val_acc: 0.8960\n",
-      "Epoch 18/30\n",
-      "2000/2000 [==============================] - 1s 532us/step - loss: 0.1479 - acc: 0.9495 - val_loss: 0.2374 - val_acc: 0.9010\n",
-      "Epoch 19/30\n",
-      "2000/2000 [==============================] - 1s 535us/step - loss: 0.1345 - acc: 0.9510 - val_loss: 0.2378 - val_acc: 0.9020\n",
-      "Epoch 20/30\n",
-      "2000/2000 [==============================] - 1s 528us/step - loss: 0.1328 - acc: 0.9550 - val_loss: 0.2374 - val_acc: 0.9020\n",
-      "Epoch 21/30\n",
-      "2000/2000 [==============================] - 1s 537us/step - loss: 0.1239 - acc: 0.9595 - val_loss: 0.2398 - val_acc: 0.9010\n",
-      "Epoch 22/30\n",
-      "2000/2000 [==============================] - 1s 531us/step - loss: 0.1198 - acc: 0.9585 - val_loss: 0.2399 - val_acc: 0.9000\n",
-      "Epoch 23/30\n",
-      "2000/2000 [==============================] - 1s 531us/step - loss: 0.1213 - acc: 0.9595 - val_loss: 0.2362 - val_acc: 0.9020\n",
-      "Epoch 24/30\n",
-      "2000/2000 [==============================] - 1s 532us/step - loss: 0.1129 - acc: 0.9595 - val_loss: 0.2453 - val_acc: 0.8980\n",
-      "Epoch 25/30\n",
-      "2000/2000 [==============================] - 1s 531us/step - loss: 0.1089 - acc: 0.9640 - val_loss: 0.2388 - val_acc: 0.9000\n",
-      "Epoch 26/30\n",
-      "2000/2000 [==============================] - 1s 546us/step - loss: 0.1034 - acc: 0.9640 - val_loss: 0.2511 - val_acc: 0.8970\n",
-      "Epoch 27/30\n",
-      "2000/2000 [==============================] - 1s 538us/step - loss: 0.0992 - acc: 0.9705 - val_loss: 0.2620 - val_acc: 0.8960\n",
-      "Epoch 28/30\n",
-      "2000/2000 [==============================] - 1s 544us/step - loss: 0.0974 - acc: 0.9675 - val_loss: 0.2441 - val_acc: 0.8990\n",
-      "Epoch 29/30\n",
-      "2000/2000 [==============================] - 1s 542us/step - loss: 0.0951 - acc: 0.9685 - val_loss: 0.2493 - val_acc: 0.8960\n",
-      "Epoch 30/30\n",
-      "2000/2000 [==============================] - 1s 550us/step - loss: 0.0881 - acc: 0.9725 - val_loss: 0.2434 - val_acc: 0.9010\n"
+      "C:\\Users\\Java\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6dfceca80c36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# 把透過預處理的卷積基底所提取的特徵做為input來進行訓練\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m history = model.fit(train_features, train_labels,\n\u001b[0m\u001b[0;32m     17\u001b[0m                     \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m                     \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_features' is not defined"
      ]
     }
    ],
